--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^8.10.0",
+    "js-cookie": "^3.0.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
